Update about text styling to ensure readability and focus

--- a/css/global.css
+++ b/css/global.css
@@ -255,7 +255,7 @@ button {
     --black-3: #131618;
     --black-4: #191f22;
     --grey-hovered: #626262;
-    --light-grey: #a8a8a8;
+    --light-grey: #888888;
     --light-light-grey: #c8c8c8;
     --invisible-grey: #f8f8f8;
   
